--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Grid Layout Example</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="grid-container">
+        <div class="grid-item" id="element-1"> 1</div>
+        <div class="grid-item" id="element-2"> 2</div>
+        <div class="grid-item" id="element-3">3</div>
+        <div class="grid-item" id="element-4">4</div>
+        <div class="grid-item" id="element-5">5</div>
+        <div class="grid-item" id="element-6">6</div>
+        <div class="grid-item" id="element-7">7</div>
+        <div class="grid-item" id="element-8">8</div>
+        <div class="grid-item" id="element-9">9</div>
+        <div class="grid-item" id="element-10">10</div>
+    </div>
 </body>
-
 </html>
