--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>Grid Layout Example</title>
 </head>
 <body>
-    <div class="grid-container">
+    <div id="grid">
         <div class="grid-item" id="element-1"> 1</div>
         <div class="grid-item" id="element-2"> 2</div>
         <div class="grid-item" id="element-3">3</div>
